--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -12,11 +12,11 @@
         <div class="col-8">
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                    <p th:if="${!#strings.isEmpty(account.name)}">
+                    <p th:if="${!#strings.isEmpty(account.nickName)}">
                             <span style="font-size: 20px;">
                                 <i class="fas fa-address-card col-1"></i>
                             </span>
-                        <span th:text="${account.name}" class="col-11"></span>
+                        <span th:text="${account.nickName}" class="col-11"></span>
                     </p>
                     <p th:if="${!#strings.isEmpty(account.location)}">
                             <span style="font-size: 20px;">
