--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -11,14 +11,14 @@
         <form class="needs-validation col-sm-6" action="#"
               th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
             <div class="form-group">
-                <label for="name">이름</label>
-                <input id="name" type="text" th:field="*{name}" class="form-control"
-                       placeholder="홍길동" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
+                <label for="nickName">닉네임</label>
+                <input id="nickName" type="text" th:field="*{nickName}" class="form-control"
+                       placeholder="honggildong" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
                 <small id="nicknameHelp" class="form-text text-muted">
                     공백없이 문자와 숫자로만 3자 이상 20자 이내로 입력하세요.
                 </small>
-                <small class="invalid-feedback">이름을 입력하세요.</small>
-                <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name Error</small>
+                <small class="invalid-feedback">닉네임을 입력하세요.</small>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('nickName')}" th:errors="*{nickName}">nickName Error</small>
             </div>
 
             <div class="form-group">
