--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments :: head"></head>
 <body class="bg-light">
-<div th:replace="fragments :: main-nav"></div>
+<div th:replace="fragments :: admin-nav"></div>
 <div class="container">
     <div class="py-5 text-center">
         <h2>관리자 페이지</h2>
