--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,6 +18,49 @@
     </style>
 </head>
 
+<nav th:fragment="admin-nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <a class="navbar-brand" href="/" th:href="@{/}">
+        Sooper
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="admin-navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/admin/categories/index}">카테고리</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/admin/items/index}">상품</a>
+            </li>
+
+        </ul>
+        <ul class="navbar-nav justify-content-end">
+            <li class="nav-item"sec:authorize="!isAuthenticated()">
+                <a class="nav-link" href="#" th:href="@{/login}">로그인</a>
+            </li>
+            <li class="nav-item"sec:authorize="!isAuthenticated()">
+                <a class="nav-link" href="#" th:href="@{/sign-up}">가입</a>
+            </li>
+            <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    프로필
+                </a>
+                <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="userDropdown">
+                    <a class="dropdown-item" th:href="@{'/profile/' + ${#authentication.name}}">내 프로필</a>
+                    <a class="dropdown-item" href="#" th:href="@{'/settings/profile'}">설정</a>
+                    <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
+                        <button class="dropdown-item" type="submit">로그아웃</button>
+                    </form>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+
 <nav th:fragment="main-nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" href="/" th:href="@{/}">
         Sooper
@@ -29,13 +72,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/town-notice}">동네 소식</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/sooper-notice}">수퍼 소식</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/order}">상품 주문</a>
+            </li>
+            <li class="nav-item pl-3">
                 <form th:action="@{/search/item}" class="form-inline" method="get">
                     <input class="form-control mr-sm-2" name="keyword" type="search" placeholder="상품 검색" aria-label="Search" />
                     <button class="btn btn-primary fas fa-search"></button>
                 </form>
             </li>
         </ul>
-
         <ul class="navbar-nav justify-content-end">
             <li class="nav-item"sec:authorize="!isAuthenticated()">
                 <a class="nav-link" href="#" th:href="@{/login}">로그인</a>
@@ -49,7 +100,6 @@
                     프로필
                 </a>
                 <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="userDropdown">
-
                     <a class="dropdown-item" th:href="@{'/profile/' + ${#authentication.name}}">내 프로필</a>
                     <a class="dropdown-item" href="#" th:href="@{'/settings/profile'}">설정</a>
                     <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
