--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,10 +20,10 @@
         <div class="row justify-content-center">
             <form class="needs-validation col-sm-6" action="#" th:action="@{/login}" method="post" novalidate>
                 <div class="form-group">
-                    <label for="nickName">이메일 또는 닉네임</label>
-                    <input id="nickName" type="text" name="nickName" class="form-control"
-                           placeholder="your@email.com" aria-describedby="nickNameHelp" required>
-                    <small id="nickNameHelp" class="form-text text-muted">
+                    <label for="username">이메일 또는 닉네임</label>
+                    <input id="username" type="text" name="username" class="form-control"
+                           placeholder="your@email.com" aria-describedby="emailHelp" required>
+                    <small id="emailHelp" class="form-text text-muted">
                         가입할 때 사용한 이메일 또는 닉네임을 입력하세요.
                     </small>
                     <small class="invalid-feedback">이메일을 입력하세요.</small>
