--- a/src/main/resources/templates/admin/categories/add.html
+++ b/src/main/resources/templates/admin/categories/add.html
@@ -5,8 +5,31 @@
 <body class="bg-light">
 <div th:replace="fragments :: admin-nav"></div>
 <div class="container">
-   
+    <div class="py-5 text-center">
+        <h2>카테고리 등록</h2>
+    </div>
+    <div class="row justify-content-center">
+        <form class="needs-validation col-sm-6" action="#"
+              th:action="@{/admin/categories/add}" th:object="${categoryForm}" method="post" novalidate>
+            <div class="form-group">
+                <label for="name">카테고리 이름</label>
+                <input id="name" type="text" th:field="*{name}" class="form-control"
+                       placeholder="등록할 카테고리 이름을 작성하세요" aria-describedby="nameHelp" required minlength="1" maxlength="20">
+                <small id="nameHelp" class="form-text text-muted">
+                    공백없이 문자와 숫자로만 1자 이상 20자 이내로 입력하세요.
+                </small>
+                <small class="invalid-feedback">카테고리 이름을 입력하세요.</small>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name Error</small>
+            </div>
+
+            <div class="form-group">
+                <button class="btn btn-primary btn-block" type="submit"
+                        aria-describedby="submitHelp">등록</button>
+            </div>
+        </form>
+    </div>
 </div>
 <div th:replace="fragments :: footer"></div>
+<script th:replace="fragments.html :: form-validation"></script>
 </body>
 </html>
