--- a/src/main/resources/templates/admin/items/edit.html
+++ b/src/main/resources/templates/admin/items/edit.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments :: head"></head>
+<body class="bg-light">
+<div th:replace="fragments :: admin-nav"></div>
+<div class="container">
 
+</div>
+<div th:replace="fragments :: footer"></div>
 </body>
 </html>
