--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -14,7 +14,7 @@
                 </button>
             </div>
             <div class="row justify-content-center">
-                <h2 class="col-sm-12" th:text="${account.nickName}">honggildong</h2>
+                <h2 class="col-sm-12" th:text="${account.nickname}">honggildong</h2>
             </div>
             <div class="row mt-3">
                 <form class="col-sm-6" action="#"
