apply main page carousel

--- a/src/main/resources/templates/admin/items/add.html
+++ b/src/main/resources/templates/admin/items/add.html
@@ -19,7 +19,7 @@
                 <label for="name">상품 이름</label>
                 <input id="name" type="text" th:field="*{name}" class="form-control"
                        placeholder="등록할 상품의 이름을 작성하세요" aria-describedby="nameHelp" required minlength="1"
-                       maxlength="30">
+                       maxlength="30" disabled>
                 <small id="nameHelp" class="form-text text-muted">
                     공백없이 문자와 숫자로만 1자 이상 30자 이내로 입력하세요.
                 </small>
