--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -73,7 +73,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#" th:href="@{/order}">상품 주문</a>
+                <a class="nav-link" href="#" th:href="@{/order/view}">주문 내역</a>
             </li>
             <li class="nav-item pl-3">
                 <form th:action="@{/search}" class="form-inline" method="get">
@@ -106,6 +106,9 @@
         </ul>
     </div>
 </nav>
+
+
+
 <footer th:fragment="footer">
     <div class="container">
         <div class="row justify-content-center">
