--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,55 @@
 <head th:replace="fragments :: head"></head>
 <body class="bg-light">
     <div th:replace="fragments :: main-nav"></div>
-    <div class="container">
-        <div class="py-5 text-center">
-            <h2>심곡 마켓</h2>
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1>심곡마켓</h1>
+            <p class="lead text-muted">
+                심곡마켓에 방문하신 걸 환영합니다<br>
+                온라인으로 주문하세요.
+            </p>
+        </div>
+    </section>
+    <div class="container-fluid mt-5">
+        <div class="row">
+            <div class="col-3">
+                <h3 class="display-4">카테고리</h3>
+                <ul class="list-group">
+                    <li class="list-group-item" th:each="category: ${categories}">
+                        <a class="nav-link" th:href="@{'/search?keyword=' + ${category.name}}" th:text="${category.name}">카테고리 명</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-8 m-auto">
+                <div id="slider3" class="carousel slide mb-5" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li class="active" data-target="#slider3" data-slide-to="0"></li>
+                        <li data-target="#slider3" data-slide-to="1"></li>
+                        <li data-target="#slider3" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="/images/이마트1.jpg"  alt="First Slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/images/이마트2.jpg"  alt="Second Slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/images/이마트3.png"  alt="Third Slide">
+                        </div>
+                    </div>
+                    <a href="#slider3" class="carousel-control-prev" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+
+                    <a href="#slider3" class="carousel-control-next" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
+
     <div th:replace="fragments :: footer"></div>
 </body>
 </html>
